[package]
name = "quadrant"
version = "0.1.0"
authors = ["inkyu <gofiri@gmail.com>"]
edition = "2018"

[dependencies]
actix-rt = "*"
awc = { version = "2.0.0-alpha.2", features = ["rustls"] }
tokio = { version = "*", features = ["io-util", "rt-core", "rt-util", "stream", "tcp"] }
log = "*"
env_logger = "*"
