[package]
name = 'quadrant'
version = '0.1.0'
authors = ['inkyu <gofiri@gmail.com>']
edition = '2018'

[dependencies]
actix-rt = '*'
aes-gcm = '*'
base64 = '*'
env_logger = '*'
chrono = '*'
http = '*'
log = '*'
rand = '*'
serde_yaml = '*'
serde_json = '*'
rsa = '*'
ring = '*'

[dependencies.serde]
version = '1.0'
features = ['derive']

[dependencies.awc]
version = '2.0.0-alpha.2'
features = ['rustls']

[dependencies.tokio]
version = '*'
features = [
    'io-util',
    'rt-core',
    'rt-util',
    'stream',
    'tcp',
]
